# picpay_ps_project

./: .gitignore  Dockerfile  Makefile  README.md  database.db  docker-compose.yml  pyproject.toml
api/: app.py
controller/: user_controller.py
controller/v1/: user_controller.py
db/: create_db.py  database.db  init_db.py  sqllite_client.py
docs/: architecture_flow.plantuml  poo_classes.plantuml
infra/: log_config.py
models/: user.py  user_model.py
repositories/: sqlite_user_repository.py  user_repository.py
repositories/meta/: interface_user_repository.py
schemas/: api_schema.py  user.py  user_schema.py
service/: user_service.py
service/meta/: interface_user_service.py
tests/: test_sqlite_client.py  test_user_controller.py  test_user_repository.py  test_user_service.py
tests/config/: fixtures.py  sqlite_client_test.py  test_sqlite_user_repository.py
tests/config/fixtures/: sqlite_session.py
tests/scenarios/: sqlite_user_repository.feature  user_controller.feature
