[tool.poetry]
name = "iury_api"
version = "0.1.0"
description = ""
authors = ["iuryrosal <iuryrosal@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
faker = "^37.0.2"
sqlalchemy = "^2.0.39"
fastapi = {extras = ["standard"], version = "^0.115.11"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
flake8 = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
